# UGA-Rust-Course

./: README.md
adv_rust/: Cargo.toml
adv_rust/src/: main.rs
bufCTF/: vul.c
cargo-workspace/: Cargo.toml  log.txt
cargo-workspace/add-one/src/: lib.rs
cargo-workspace/adder/: Cargo.toml
cargo-workspace/adder/src/: main.rs
chapter6/src/: main.rs
clo_th_ch/: Cargo.toml
clo_th_ch/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs
day_bet_dates/: Cargo.toml
day_bet_dates/src/: main.rs
enum/: Cargo.toml
enum/src/: main.rs
extras/rand_presentation/: Cargo.toml
extras/rand_presentation/src/: main.rs
factorial/: Cargo.toml
factorial/src/: main.rs
files/: Cargo.toml  hello.txt  lines.txt  my-file
files/src/: main.rs
fn_language/: Cargo.toml
fn_language/src/: main.rs
gen_tr_lf/: Cargo.toml
gen_tr_lf/src/: main.rs
intro_to_rust/cargo-proj/: Cargo.toml  Dockerfile
intro_to_rust/cargo-proj/src/: help.rs  main.rs  my.rs
intro_to_rust/cargo-proj/src/code/: mod.rs
intro_to_rust/simple/: main  main.rs
macro_lec/: Cargo.toml
macro_lec/src/: main.rs
mem_c_code/: opt_optout.asm  optout  optout.c  t_confusion  t_confusion.cpp  un_opt_optout.asm
modCode/: Cargo.toml
modCode/src/: main.rs
mod_example/: Cargo.toml
mod_example/src/: code.rs  main.rs
mod_example/src/alt/: altcode.rs
mod_example/src/opt/: good.rs  mod.rs
more_cargo/art/src/: lib.rs
oop/: Cargo.toml
oop/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
refcell/src/: lib.rs
restaurant/: Cargo.toml
restaurant/src/: alt.rs  lib.rs
restaurant/src/libs/: mylibs.rs
rust_basics/: Cargo.toml
rust_basics/src/: main.rs
rustio/: Cargo.toml
rustio/src/: main.rs
smart_ptr/: Cargo.toml
smart_ptr/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
testing/: Cargo.toml
testing/src/: lib.rs
testing/tests/: integration_test.rs
tr_macro/: Cargo.toml
tr_macro/tr_macro_derive/: Cargo.toml
tr_macro/tr_macro_derive/src/: lib.rs
varBinary/: Cargo.toml  README.md
varBinary/binExample/: example.rs
varBinary/examples/: sample1.rs  sample2.rs
