[package]
name = "files"
version = "0.1.0"
authors = ["Mustakimur Rahman <mustakcsecuet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-lock = "2.1.11"
file-guard = "0.2.0"

#[profile.release]
#panic = 'abort'