[package]
name = "restaurant"
version = "0.1.0"
authors = ["Mustakimur Rahman <mustakcsecuet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin/bin.rs"

[dependencies]
