[package]
name = "restaurant"
version = "0.1.0"
authors = ["Mustakimur Rahman <mustakcsecuet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin/bin.rs"

[[bin]]
name = "myalt"
path = "src/bin/balt.rs"

[[bin]]
name = "more"
path = "src/bin/more.rs"

[dependencies]
